--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "joi": "^13.6.0",
+    "mongodb": "^3.1.4",
+    "mongoose": "^5.2.10",
     "pug": "^2.0.3",
     "underscore": "^1.9.1"
   }
